<resources>
    <string name="app_name">HolaMundo</string>
    <string name="tile">Every Bite a</string>
    <string name="subtile">Better Burger!</string>
    <string name="s1">Burger</string>
    <string name="s2">Pasta</string>
    <string name="s3">Salads</string>
    <string name="b1">Beef Burger</string>
    <string name="b2">Chicken Burger</string>
    <string name="b3">Clasic Burger</string>
    <string name="b4">Grilled Burger</string>
    <string name="d1">Onion with cheese</string>
    <string name="d2">Cheese with chicken</string>
    <string name="d3">Beef with lettuce</string>
    <string name="d4">Griller chicken</string>
    <string name="c1">$18.00</string>
    <string name="c2">$12.00</string>
    <string name="c3">$24.00</string>
    <string name="c4">$14.00</string>
    <string name="todo">TODO</string>
</resources>